casi fin semana

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Temporary Items
 
 redes emergentes/unit3/~$tarea.docx
 taller de investigacion 2/~$tonioRoa-Semaforo.docx
+Ingles/~$untesU2ingles.docx
+desarrollo sustentable/~$untesU2sust.docx
