--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ redes emergentes/unit3/~$tarea.docx
 taller de investigacion 2/~$tonioRoa-Semaforo.docx
 Ingles/~$untesU2ingles.docx
 desarrollo sustentable/~$untesU2sust.docx
+Ingles/~$pical food Mexican.docx
+Ingles/~$verbs.docx
